@@ -9,8 +9,6 @@ import org.expense_bot.model.UserCategory;
 import org.expense_bot.service.UserCategoryService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
-import org.telegram.telegrambots.meta.api.objects.LoginUrl;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboard;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardMarkup;
@@ -55,7 +53,7 @@ public class KeyboardHelper {
 	row.add(Messages.EXPENSES);
 	row.add(Messages.INCOMES);
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row))
+	  .keyboard(Collections.singletonList(row))
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(false).build();
@@ -68,8 +66,11 @@ public class KeyboardHelper {
 	row.add(Messages.CHECK_EXPENSES);
 	KeyboardRow row1 = new KeyboardRow();
 	row1.add(Constants.BUTTON_BACK);
+	final List<KeyboardRow> rows = new ArrayList<>();
+	rows.add(row);
+	rows.add(row1);
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row, row1))
+	  .keyboard(rows)
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(false).build();
@@ -84,8 +85,14 @@ public class KeyboardHelper {
 	row2.add(Messages.CHECK_BALANCE);
 	KeyboardRow row3 = new KeyboardRow();
 	row3.add(Constants.BUTTON_BACK);
+	List<KeyboardRow> rows = new ArrayList<>();
+	rows.add(row);
+	rows.add(row1);
+	rows.add(row2);
+	rows.add(row3);
+
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row, row1, row2, row3))
+	  .keyboard(rows)
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(false).build();
@@ -95,7 +102,7 @@ public class KeyboardHelper {
 	final KeyboardRow row = new KeyboardRow();
 	row.add(Constants.BUTTON_CANCEL);
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row))
+	  .keyboard(Collections.singletonList(row))
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(false)
@@ -113,8 +120,15 @@ public class KeyboardHelper {
 	row4.add(Period.PERIOD.getValue());
 	KeyboardRow row5 = new KeyboardRow();
 	row5.add(Constants.BUTTON_BACK);
+	List<KeyboardRow> rows = new ArrayList<>();
+	rows.add(row1);
+	rows.add(row2);
+	rows.add(row3);
+	rows.add(row4);
+	rows.add(row5);
+
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row1, row2, row3, row4, row5))
+	  .keyboard(rows)
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(false)
@@ -154,8 +168,13 @@ public class KeyboardHelper {
 	row3.add(CategoryAction.ADD_FROM_DEFAULT.getValue());
 	KeyboardRow row4 = new KeyboardRow();
 	row4.add(Constants.BUTTON_BACK);
+	List<KeyboardRow> rows = new ArrayList<>();
+	rows.add(row1);
+	rows.add(row2);
+	rows.add(row3);
+	rows.add(row4);
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row1, row2, row3, row4))
+	  .keyboard(rows)
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(false)
@@ -190,8 +209,11 @@ public class KeyboardHelper {
 	final KeyboardRow row1 = new KeyboardRow();
 	row.add(Messages.ENTER_DATE);
 	row1.add(Constants.BUTTON_BACK);
+	List<KeyboardRow> rows = new ArrayList<>();
+	rows.add(row);
+	rows.add(row1);
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row, row1))
+	  .keyboard(rows)
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(true)
@@ -202,7 +224,7 @@ public class KeyboardHelper {
 	final KeyboardRow row = new KeyboardRow();
 	row.add(Constants.BUTTON_BACK);
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row))
+	  .keyboard(Collections.singletonList(row))
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(true)
@@ -213,7 +235,7 @@ public class KeyboardHelper {
 	final KeyboardRow row = new KeyboardRow();
 	row.add(Messages.MY_STICKERS);
 	return ReplyKeyboardMarkup.builder()
-	  .keyboard(List.of(row))
+	  .keyboard(Collections.singletonList(row))
 	  .selective(true)
 	  .resizeKeyboard(true)
 	  .oneTimeKeyboard(true)
